--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
+  <div class="wraper">
+    <header>
+      <a href="#">Shoe<span>Brand</span></a>
+
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">sneakers</a></li>
+          <li><a href="#">players</a></li>
+        </ul>
+        
+        <svg fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M 2 5 L 2 7 L 22 7 L 22 5 L 2 5 z M 2 11 L 2 13 L 22 13 L 22 11 L 2 11 z M 2 17 L 2 19 L 22 19 L 22 17 L 2 17 z"/></svg>
+      </nav>
+
+    </header>
+
+  </div>
   
 </body>
 </html>
