--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
           <li><a href="#">players</a></li>
         </ul>
         
-        <svg fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M 2 5 L 2 7 L 22 7 L 22 5 L 2 5 z M 2 11 L 2 13 L 22 13 L 22 11 L 2 11 z M 2 17 L 2 19 L 22 19 L 22 17 L 2 17 z"/></svg>
+        <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" class="close"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M 2 5 L 2 7 L 22 7 L 22 5 L 2 5 z M 2 11 L 2 13 L 22 13 L 22 11 L 2 11 z M 2 17 L 2 19 L 22 19 L 22 17 L 2 17 z"/></svg>
       </nav>
-
     </header>
 
+      <section class="hero">
+        <h1>Regain your confidence on the court</h1>
+        <p class="subhead">A shoe built with purpose and to take your game to the next level.</p>
+
+      <img src="images/down-arrow-svgrepo-com.svg" alt="dwon-arrow">
+
+      </section>
   </div>
   
 </body>
