more-info section html structur

--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
         <p class="subhead">A shoe built with purpose and to take your game to the next level.</p>
 
       <img src="images/down-arrow-svgrepo-com.svg" alt="dwon-arrow">
+      </section>
+
+      <section class=" more-info">
+        <div class="features">
+          <p class="subhea">Lightweight</p>
+          <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
+        </div>
+
+        <img src="images/1-prestwich-jLEGurepDco-unsplash (1).jpg" alt="Lightweight shoe" height="30%" width="30%">
+
+      </section><section class=" more-info">
+        <div class="features">
+          <p class="subhea">Flexibility</p>
+          <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
+        </div>
+
+        <img src="images/2-prestwich-jLEGurepDco-unsplash (2).jpg" alt="flexible shoe" height="30%" width="30%">
+
+        <section class=" more-info">
+          <div class="features">
+            <p class="subhea">Durability</p>
+            <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
+          </div>
+  
+          <img src="images/3-prestwich-jLEGurepDco-unsplash (3).jpg" alt="durable shoe" height="30%" width="30%">
+  
+        </section>
 
       </section>
   </div>
