--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
         </div>
 
-        <img src="images/1-prestwich-jLEGurepDco-unsplash (1).jpg" alt="Lightweight shoe" height="30%" width="30%">
+        <img src="images/jakob-owens-JzJSybPFb3s-unsplash.jpg" alt="Lightweight shoe" height="30%" width="30%">
 
       </section><section class=" more-info">
         <div class="features">
@@ -45,7 +45,7 @@
           <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
         </div>
 
-        <img src="images/2-prestwich-jLEGurepDco-unsplash (2).jpg" alt="flexible shoe" height="30%" width="30%">
+        <img src="images/1-prestwich-jLEGurepDco-unsplash (1).jpg" alt="flexible shoe" height="30%" width="30%">
 
         <section class=" more-info">
           <div class="features">
@@ -53,7 +53,7 @@
             <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
           </div>
   
-          <img src="images/3-prestwich-jLEGurepDco-unsplash (3).jpg" alt="durable shoe" height="30%" width="30%">
+          <img src="images/super-straho-5BMPrXBFTI8-unsplash.jpg" alt="durable shoe" height="30%" width="30%">
   
         </section>
 
