--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+    <div class="hero-img"></div>
   <div class="wraper">
     <header>
       <a href="#">Shoe<span>Brand</span></a>
@@ -19,9 +19,9 @@
           <li><a href="#">sneakers</a></li>
           <li><a href="#">players</a></li>
         </ul>
-        
-        <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" class="close"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M 2 5 L 2 7 L 22 7 L 22 5 L 2 5 z M 2 11 L 2 13 L 22 13 L 22 11 L 2 11 z M 2 17 L 2 19 L 22 19 L 22 17 L 2 17 z"/></svg>
       </nav>
+
+      <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" class="close"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M 2 5 L 2 7 L 22 7 L 22 5 L 2 5 z M 2 11 L 2 13 L 22 13 L 22 11 L 2 11 z M 2 17 L 2 19 L 22 19 L 22 17 L 2 17 z"/></svg>
     </header>
 
       <section class="hero">
@@ -33,31 +33,40 @@
 
       <section class=" more-info">
         <div class="features">
-          <p class="subhea">Lightweight</p>
-          <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
-        </div>
+          <div class="content">
+            <p class="title">Lightweight</p>
+            <p class="desc">Loremti ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
 
-        <img src="images/jakob-owens-JzJSybPFb3s-unsplash.jpg" alt="Lightweight shoe" height="30%" width="30%">
-
-      </section><section class=" more-info">
-        <div class="features">
-          <p class="subhea">Flexibility</p>
-          <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
-        </div>
-
-        <img src="images/1-prestwich-jLEGurepDco-unsplash (1).jpg" alt="flexible shoe" height="30%" width="30%">
-
-        <section class=" more-info">
-          <div class="features">
-            <p class="subhea">Durability</p>
-            <p class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
           </div>
-  
+          <img src="images/jakob-owens-JzJSybPFb3s-unsplash.jpg" alt="Lightweight shoe" height="30%" width="30%">
+        </div>
+
+
+        <div class="features left">
+          <div class="content">
+            <p class="title">Flexibility</p>
+            <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
+
+          </div>
+          <img src="images/1-prestwich-jLEGurepDco-unsplash (1).jpg" alt="flexible shoe" height="30%" width="30%">
+        </div>
+
+
+        <div class="features">
+          <div class="content">
+            <p class="title">Durability</p>
+            <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro sit, laborum vero enim dolor neque.</p>
+
+          </div>
           <img src="images/super-straho-5BMPrXBFTI8-unsplash.jpg" alt="durable shoe" height="30%" width="30%">
-  
-        </section>
+
+        </div>
+
+
+        
 
       </section>
+
   </div>
   
 </body>
