--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="hero-img"></div>
   <div class="wraper">
     <header>
-      <a href="#">Shoe<span>Brand</span></a>
+      <a href="#" class="logo">Shoe<span>Brand</span></a>
 
       <nav>
         <ul>
