--- a/index.html
+++ b/index.html
@@ -71,13 +71,23 @@
           <img src="images/super-straho-5BMPrXBFTI8-unsplash.jpg" alt="durable shoe" height="30%" width="30%">
 
         </div>
-
-
-        
-
       </section>
-
   </div>
+  <script>
+    const menu =document.querySelector('.menu')
+    const close = document.querySelector('.close')
+    const nav = document.querySelector ('nav')
+
+    menu.addEventListener('click', () => {
+      nav.classList.add('open-nav')
+    })
+
+    close.addEventListener('click', () => {
+      nav.classList.remove('open-nav')
+    })
+
+
+  </script>
   
 </body>
 </html>
