--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Regain your confidence on the court</h1>
         <p class="subhead">A shoe built with purpose and to take your game to the next level.</p>
 
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <svg class="down-arrow" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	      viewBox="0 0 476.492 476.492" style="enable-background:new 0 0 476.492 476.492;" xml:space="preserve">
         <polygon points="253.246,339.952 253.246,0 223.246,0 223.246,339.952 101.707,339.952 238.246,476.492 374.785,339.952 "/>
         </svg>
